[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["THETOMMY1122 <146836946+THETOMMY1122@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
